[lucky]add address collection
